# red-evenbetter

./: .gitignore  README.md  pyproject.toml
red_better/: cache.py  command.py  hashcheck.py  main.py  redactedapi.py  run_sox.sh  spectrograms-old.py  spectrograms.py  tagging.py  torrent-crawl.py  torrent-parse.py  transcode.py
