[tool.poetry]
name = "red-better"
version = "0.1.0"
description = "REDBetter fork"
authors = ["Jake Johan <seedeverything@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
