[tool.poetry]
name = "red-better"
version = "0.1.0"
description = "REDBetter fork"
authors = ["Jake Johan <seedeverything@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.24.0"
jsonpickle = "^1.4.1"
mutagen = "^1.44.0"
Unidecode = "^1.1.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
better = 'red_better.main:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
